# private-automation-server

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: config.rs  default_config.toml  main.rs  web.rs
