[package]
name = "private-automation-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
camino = "1.1.7"
clap = { version = "4.5.15", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1.0.206", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3"
